// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcTile component renders default space correctly 1`] = `
<div class="oc-tile-card oc-card oc-card-default oc-rounded">
  <oc-resource-link-stub class="oc-card-media-top oc-border-b oc-flex oc-flex-center oc-flex-middle" isresourceclickable="true" resource="[object Object]">
    <!---->
    <oc-resource-icon-stub class="tile-default-image oc-p-m" resource="[object Object]" size="xxlarge"></oc-resource-icon-stub>
  </oc-resource-link-stub>
  <div class="oc-card-body oc-p-s">
    <div class="oc-flex oc-flex-between oc-flex-middle">
      <div class="oc-flex oc-flex-middle oc-text-truncate">
        <oc-resource-stub isextensiondisplayed="true" isresourceclickable="true" isthumbnaildisplayed="true" parentfoldernamedefault="" resource="[object Object]"></oc-resource-stub>
      </div>
      <div class="oc-flex oc-flex-middle"></div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`OcTile component renders disabled space correctly 1`] = `
<div class="oc-tile-card oc-card oc-card-default oc-rounded state-trashed">
  <oc-resource-link-stub class="oc-card-media-top oc-border-b oc-flex oc-flex-center oc-flex-middle" isresourceclickable="true" resource="[object Object]">
    <oc-tag-stub class="resource-disabled-indicator oc-position-absolute" size="medium" type="span">
      <span data-current-language="en_US" data-msgid="Disabled">Disabled</span>
    </oc-tag-stub>
    <oc-resource-icon-stub class="tile-default-image oc-p-m" resource="[object Object]" size="xxlarge"></oc-resource-icon-stub>
  </oc-resource-link-stub>
  <div class="oc-card-body oc-p-s">
    <div class="oc-flex oc-flex-between oc-flex-middle">
      <div class="oc-flex oc-flex-middle oc-text-truncate">
        <oc-resource-stub isextensiondisplayed="true" isresourceclickable="true" isthumbnaildisplayed="true" parentfoldernamedefault="" resource="[object Object]"></oc-resource-stub>
      </div>
      <div class="oc-flex oc-flex-middle"></div>
    </div>
    <!---->
  </div>
</div>
`;
